sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple pattern
var:x==Boolean
   ^AlgBubbleSort1:4: error: '=' expected but ';' found.
do{
^AlgBubbleSort1:11: error: '(' expected but '{' found.
}while{x==false}
      ^